--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,6 +1,94 @@
+@import url('https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100;200;300;400;500;600;700;800&display=swap');
+
 #root,
 html,
 body {
+    /* font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif; */
+    font-family: 'Playpen Sans', cursive;
+    font-weight: 400;
+
+    color-scheme: light dark;
+    color: rgba(255, 255, 255, 0.87);
+    background-color: #242424;
+}
+
+.container-box {
+    height: calc(100% - 56px);
+    max-width: 100% !important;
+    margin: 0px !important;
+    padding: 12px !important;
+}
+
+.btn {
+    border-radius: 18px !important;
+    background-color: #804ab3 !important;
+    border: 0px !important;
+    height: 38px;
+    text-wrap: nowrap;
+}
+
+.page-container {
     width: 100%;
     height: 100%;
+    padding: 30px 0px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
+
+.form-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid rgb(48, 48, 48);
+    border-radius: 18px;
+    height: 40px;
+    width: 100%;
+    max-width: 400px;
+}
+
+.form-container-input {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    border: none !important;
+    border-radius: 18px;
+    background-color: transparent !important;
+    padding: 0px 8px;
+}
+.form-container-input:focus {
+    border: none !important;
+    border-color: transparent !important;
+    border-radius: 18px;
+    background-color: transparent !important;
+    outline: none;
+}
+
+.form-container-btn {
+    margin: 0px !important;
+}
+
+.round-box {
+    width: 100%;
+    max-width: 400px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.round-box p {
+    margin: 0px;
+    padding: 0px 8px;
+    color: #727272;
+}
+.round-quantity-box {
+    width: 120px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* textarea:focus,
+input:focus {
+    outline: none;
+} */
