--- a/client/src/pages/room.css
+++ b/client/src/pages/room.css
@@ -15,4 +15,32 @@
 .room-box-center {
     width: 100%;
     height: 100%;
+    margin-left: 24px;
+    /* border: 1px solid gray; */
+    border: 1px solid rgb(48, 48, 48);
+    border-radius: 18px;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+    -moz-appearance: textfield;
+    appearance: inherit;
+}
+
+@media screen and (max-width: 500px) {
+    .room-box-lefbar {
+        display: none;
+        visibility: hidden;
+    }
+    .room-box {
+        flex-direction: column;
+        justify-content: space-between;
+    }
 }
