--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,7 +13,8 @@ body {
 }
 
 .container-box {
-    height: calc(100% - 56px);
+    /* height: calc(100% - 56px); */
+    height: 100%;
     max-width: 100% !important;
     margin: 0px !important;
     padding: 12px !important;
@@ -86,6 +87,26 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background-color: #242424;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background-color: #242424;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background-color: #242424;
 }
 
 /* textarea:focus,
