--- a/client/src/pages/room.css
+++ b/client/src/pages/room.css
@@ -12,12 +12,29 @@
     flex-direction: column;
     justify-content: flex-start;
 }
+.room-box-leftbar-mobile {
+    position: absolute;
+    background-color: #242424;
+    top: 62px;
+    left: 0;
+    width: 100%;
+    height: calc(100vh - 12px - 50px);
+    z-index: 100;
+    padding: 12px;
+    padding-top: 0px;
+}
+.chat-display-toggle {
+    position: absolute;
+    right: 24px;
+    top: 24px;
+    visibility: hidden;
+}
 .room-box-center {
     width: 100%;
     height: 100%;
     margin-left: 24px;
     /* border: 1px solid gray; */
-    border: 1px solid rgb(48, 48, 48);
+    /* border: 1px solid rgb(48, 48, 48); */
     border-radius: 18px;
 }
 
@@ -35,9 +52,15 @@ input[type='number'] {
 }
 
 @media screen and (max-width: 500px) {
-    .room-box-lefbar {
+    .chat-display-toggle {
+        visibility: visible;
+    }
+    .room-box-leftbar {
         display: none;
         visibility: hidden;
+    }
+    .room-box-center {
+        margin: 0px;
     }
     .room-box {
         flex-direction: column;
